Text gets wrongly clipped when using accented letters #30575

Closed
opened 2012-03-17 17:55:23 +01:00 by Julien Enche · 7 comments

%%%Happens with 2.62 and latest SVN revision.
Open the attached blend.Resize the node. Text in the editbox disappears when the character "é" becomes hidden.
%%%

%%%Happens with 2.62 and latest SVN revision. Open the attached blend.Resize the node. Text in the editbox disappears when the character "é" becomes hidden. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Bug seems to be in function ui_text_leftclip which doesn't take care of utf8 characters when incrementing but->ofs.%%%

%%%Bug seems to be in function ui_text_leftclip which doesn't take care of utf8 characters when incrementing but->ofs.%%%

%%%Got fix for this issue but want somebody to review changes
Campbell, can you help with review?%%%

%%%Got fix for this issue but want somebody to review changes Campbell, can you help with review?%%%
Author

%%%Thanks Sergey for your fix.
I did some tests with your patch, seems to work OK.%%%

%%%Thanks Sergey for your fix. I did some tests with your patch, seems to work OK.%%%

%%%LGTM, no need for BLI_str_size_in_bytes_urf8, can just use strlen in this case.%%%

%%%LGTM, no need for BLI_str_size_in_bytes_urf8, can just use strlen in this case.%%%

%%%Removed that function and commited to rev45080.
Thanks for the report and review, closing now.%%%

%%%Removed that function and commited to rev45080. Thanks for the report and review, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30575
No description provided.