Fix #30575: Text gets wrongly clipped when using accented letters

Clipping functions used for drawing weren't using stepping and always were assuming
letters are single byte encoded. Now they're using correct stepping.